src/routes/styles/Checkout.css
.checkout-header {
  padding: 30px 0 0 0;
}

.continue-shopping {
  display: flex;
  align-items: center;
  gap: 5px;
  text-align: center;
  width: fit-content;
  margin: auto;
  transition: 0.25s ease-in-out;
  font-size: 1.2rem;
  color: var(--highlight-color-two);
}

.continue-shopping:hover {
  color: var(--highlight-brighty-color-two);
  transform: scale(1.1);
}

.link-wrapper {
  position: relative;
  width: fit-content;
  margin: 2rem auto;
  display: flex;
  justify-content: center;
  gap: 3rem;
}

.checkout-container {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.checkout-cart {
  height: fit-content;
  max-height: 620px;
  gap: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.checkout-cart-products {
  display: flex;
  border-top: 3px solid var(--tertiary-color);
  border-bottom: 3px solid var(--tertiary-color);
  flex-direction: column;
  gap: 1rem;
  overflow-y: scroll;
  padding: 0 1rem;
}

.checkout-information {
  width: 100%;
}

.checkout-product {
  display: flex;
  align-items: center;
  text-align: center;
  gap: 1rem;
  border-left: 2px solid var(--tertiary-color);
  border-right: 2px solid var(--tertiary-color);
  padding: 1rem;
  box-shadow: 0 0 5px 1px black;
  height: 80px;
}

.checkout-products-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

.checkout-product-trash,
.checkout-product-link {
  border: none;
  outline: none;
  background-color: transparent;
  color: var(--highlight-color-two);
  cursor: pointer;
  font-size: 1rem;
}

.checkout-product-link {
  color: var(--highlight-color-two);
}

.checkout-image {
  width: 40px;
  object-fit: contain;
}

.checkout-title {
  max-width: 250px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.checkout-price {
  color: var(--highlight-color-two);
  text-align: center;
}

.checkout-link {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
  color: var(--text-color);
}

.checkout-check {
  border: 2px solid var(--highlight-color);
  position: relative;
  width: 20px;
  height: 20px;
  transition: 0.25s ease-in-out;
  border-radius: 50%;
}

.checkout-check::before {
  position: absolute;
  content: "";
  width: 6px;
  height: 11px;
  transform: rotate(45deg);
  border: solid var(--primary-color);
  border-width: 0 3px 3px 0;
  left: 5px;
  bottom: 3.2px;
}

.checked {
  transition: 0.25s ease-in-out;
  background-color: var(--highlight-color);
  box-shadow: 0 0 50px 2px var(--highlight-color);
}

.highlighted {
  color: var(--highlight-color);
}

@media (max-width: 1150px) {
  .checkout-container {
    flex-direction: column;
  }
  .checkout-cart-products {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }
}

@media (max-width: 850px) {
  .checkout-cart-products {
    grid-template-columns: 1fr;
  }
}

@media (max-width: 450px) {
  .checkout-title {
    max-width: 200px;
  }

  .link-wrapper {
    gap: 2rem;
  }

  .checkout-link {
    font-size: 0.8rem;
  }
}

@media (max-width: 390px){
  .checkout-title {
    max-width: 150px;
  }
}

